--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,10 @@
-footer {
+footer div {
+  font-size: 1.6rem;
+  width: 100;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  @media @phone {
+    width: 90%;
+    text-align: center;
+  }
 }
